@@ -1,14 +1,13 @@
 package es.deusto.sd.ecoembes.service;
 
 import es.deusto.sd.ecoembes.dao.ContenedorRepository;
-import es.deusto.sd.ecoembes.dao.InfoContenedorRepository;
 import es.deusto.sd.ecoembes.entity.Contenedor;
 import es.deusto.sd.ecoembes.entity.InfoContenedor;
 import es.deusto.sd.ecoembes.entity.NivelLlenado;
+import jakarta.transaction.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import java.util.List;
-import es.deusto.sd.ecoembes.entity.InfoContenedor;
 
 import java.time.LocalDate;
 import java.time.ZoneId;
@@ -16,41 +15,39 @@ import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
+@Transactional
 public class ContenedorService {
 
     @Autowired
     private ContenedorRepository contenedorRepository;
 
-    @Autowired
-    private InfoContenedorRepository infoContenedorRepository;
-    
-    
     public List<Contenedor> getAllContenedores() {
-		return contenedorRepository.findAll();
-	}
-
+        return contenedorRepository.findAll();
+    }
     public void addContenedor(Contenedor c) {
         contenedorRepository.save(c);
     }
+
     public void addInfoContenedor(Contenedor c, ArrayList<InfoContenedor> lista) {
         Contenedor contenedorVivo = contenedorRepository.findById(c.getId()).orElse(c);
 
         // 2. Asignamos esa versión viva a cada InfoContenedor
         for (InfoContenedor info : lista) {
             info.setContenedor(contenedorVivo);
+            contenedorVivo.getHistorial().add(info);
         }
 
         // 3. Guardamos la lista. Ahora Hibernate está feliz porque usa el objeto conectado.
-        infoContenedorRepository.saveAll(lista);
+        contenedorRepository.save(contenedorVivo);
     }
-
-    public Optional<InfoContenedor> actualizarInfoContenedor(Long idContenedor, int numEnvases, String nivelLlenadoStr){
+    //POST esto lo usara el sensor asiq no hace falta token
+    public Optional<InfoContenedor> actualizarInfoContenedor(Long idContenedor, int numEnvases, String nivelLlenadoStr) {
         Optional<Contenedor> contenedor = contenedorRepository.findById(idContenedor);
         if (contenedor.isPresent()) {
             Contenedor contenedorActual = contenedor.get();
             NivelLlenado nivelLlenado = NivelLlenado.valueOf(nivelLlenadoStr);
             InfoContenedor infoContenedor = new InfoContenedor(contenedorActual,numEnvases, nivelLlenado,new Date());
-            infoContenedorRepository.save(infoContenedor);
+            contenedorActual.getHistorial().add(infoContenedor);
             contenedorActual.setNivel(nivelLlenado);
             contenedorRepository.save(contenedorActual);
             return Optional.of(infoContenedor);
@@ -72,36 +69,31 @@ public class ContenedorService {
     //GET
     public Optional<?> getInfoContendorPorFecha(long idContenedor, Date fechaInicio, Date fechaFin, String token){
         // Eder del furturo tendria q mejorar esto con el boy
-        if (contenedorRepository.existsById(idContenedor)) {
-            List<InfoContenedor> todas = infoContenedorRepository.findAll();
+        Optional<Contenedor> contenedor = contenedorRepository.findById(idContenedor);
 
-            List<InfoContenedor> resultado = todas.stream()
-                    .filter(info -> info.getIdContenedor() == idContenedor) // Ojo con el nombre del campo en tu entidad
+        if (contenedor.isPresent()) {
+            List<InfoContenedor> historial = contenedor.get().getHistorial();
+
+            List<InfoContenedor> resultado = historial.stream()
                     .filter(info -> info.getFechaActu().after(fechaInicio) && info.getFechaActu().before(fechaFin))
                     .collect(Collectors.toList());
-
             return Optional.of(resultado);
         } else {
             return Optional.empty();
         }
     }
-
-
     //GET
-    public Optional<?> getInfoContenedorPorZona(String cp, Date fecha){
+    public Optional<?> getInfoContenedorPorZona(String cp, Date fecha, String token){
         // Buscar contenedores por CP
         // Ideal: contenedorRepository.findByCp(cp)
         List<Contenedor> contenedoresZona = contenedorRepository.findAll().stream()
                 .filter(c -> c.getCp().equals(cp))
-                .collect(Collectors.toList());
+                .toList();
 
         ArrayList<InfoContenedor> resultado = new ArrayList<>();
-        List<InfoContenedor> todasLasInfos = infoContenedorRepository.findAll(); // Mejorar con consulta JPA
 
         for (Contenedor c : contenedoresZona) {
-            // Filtramos infos de este contenedor para la fecha dada
-            todasLasInfos.stream()
-                    .filter(info -> info.getIdContenedor() == c.getId())
+            c.getHistorial().stream()
                     .filter(info -> compraraDias(info.getFechaActu(), fecha))
                     .forEach(resultado::add);
         }
@@ -120,15 +112,11 @@ public class ContenedorService {
     }
 
     public InfoContenedor getUltimaInfoContenedor(Long idContenedor) {
-        List<InfoContenedor> todas = infoContenedorRepository.findAll();
-        List<InfoContenedor> delContenedor = new ArrayList<>();
+        Optional<Contenedor> c = contenedorRepository.findById(idContenedor);
 
-        for(InfoContenedor info : todas) {
-            if(info.getContenedor().getId() == idContenedor) delContenedor.add(info);
-        }
-
-        if (!delContenedor.isEmpty()) {
-            return delContenedor.get(delContenedor.size() - 1);
+        if (c.isPresent() && !c.get().getHistorial().isEmpty()) {
+            List<InfoContenedor> historial = c.get().getHistorial();
+            return historial.get(historial.size() - 1);
         }
         return null;
     }
